environments/dev/patches/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
