environments/dev/patches/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: foodflow-app
