environments/dev/patches/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-app
spec:
  template:
    spec:
      containers:
        - name: foodflow-app
          image: foodflow-dev:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodflow-api
spec:
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/simonbrundin/foodflow:ff9dd4bac6f1a8b260972f7347fa0c4a8d43d842
          imagePullPolicy: Always
