environments/dev/patches/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodflow-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
