environments/dev/patches/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodflow-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
